--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lucide-react": "^0.300.0",
     "next": "^14.0.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "@playwright/test": "^1.51.1"
+
   },
   "devDependencies": {
     "@playwright/test": "^1.51.1",
