--- a/package.json
+++ b/package.json
@@ -4,26 +4,30 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && npx playwright install && npx playwright install-deps",
-    "start": "next start",
-    "test": "playwright test"
+    "build": "next build",
+    "start": "next start -p $PORT",
+    "lint": "next lint",
+    "test": "playwright test",
+    "postinstall": "npx playwright install --with-deps chromium && npx playwright install-deps"
   },
   "dependencies": {
-    "lucide-react": "^0.300.0",
-    "next": "^14.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "@playwright/test": "^1.51.1"
-
+    "@playwright/test": "^1.51.1",
+    "next": "14.2.28",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@playwright/test": "^1.51.1",
-    "@types/node": "^20.11.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.0.0"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.28",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
