--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@playwright/test": "^1.51.1",
+    "lucide-react": "^0.344.0",
     "next": "14.2.28",
     "react": "^18",
     "react-dom": "^18"
