--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start -p $PORT",
     "lint": "next lint",
+    "pretest": "npx playwright install chromium",
     "test": "playwright test",
     "postinstall": "npx playwright install chromium"
   },
