--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start -p $PORT",
-    "lint": "next lint",
-    "pretest": "npx playwright install chromium",
-    "test": "playwright test",
-    "postinstall": "npx playwright install chromium"
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start -p $PORT",
+  "lint": "next lint",
+  "test": "playwright test",
+  "postinstall": "npx playwright install"
+
+
   },
   "dependencies": {
     "@playwright/test": "^1.51.1",
