Refactor package.json and render.yaml to enhance Playwright setup; update build and postinstall scripts, rename service, and adjust build commands for improved testing workflow

--- a/render.yaml
+++ b/render.yaml
@@ -1,16 +1,25 @@
 services:
   - type: web
-    name: playwright-dashboard
+    name: playwright-ui-interface
     env: node
+    plan: free
+    branch: main  # change if needed
     buildCommand: |
       npm install
+      npx playwright install
+      npx playwright test --reporter=list
       npm run build
-      PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1 npx playwright install chromium
-    startCommand: npm start
+    startCommand: npm run start
+    buildFilter:
+      paths:
+        - tests/**/*
+        - playwright.config.ts
+        - package.json
+        - next.config.js
+        - tsconfig.json
+        - src/**/*
+        - public/**/*
+        - .env
     envVars:
       - key: NODE_ENV
         value: production
-      - key: PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD
-        value: "1"
-    healthCheckPath: /
-    autoDeploy: true 
