--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,9 @@ services:
     name: playwright-ui-interface
     env: node
     plan: free
-    branch: main  # change if needed
+    branch: main
     buildCommand: |
-      npm install
+      npm ci
       npx playwright install
       npx playwright test --reporter=list
       npm run build
